File index.html adding line of comments for explanation

--- a/Form_contact/index.html
+++ b/Form_contact/index.html
@@ -15,6 +15,7 @@
 
     <!--=================== Código lógico do arquivo main.js =======================-->
     <script src="main.js"></script>
+    <!--============================================================================-->
 
 
 
@@ -25,7 +26,7 @@
     </script>
 
 </head>
-
+<!--======================== código do formulário de contato ===============================-->
 <body>
     <div class="container border mt-3 bg-light">
         <div class="row">
@@ -49,7 +50,7 @@
                     <h5 for="message">Mensagem</h5>
                     <textarea id="message" rows="3" class="form-control"></textarea>
                 </div>
-                <button class="btn btn-primary" onclick="sendMail()">Enviar</button>
+                <button class="btn btn-primary" onclick="sendMail()">Enviar</button> <!--reparem que a função "onclick" recebe como parâmetro a função que criamos lá no arquivo JS-->
             </div>
         </div>
     </div>
